N5文法が終わった

--- a/日本語/文法/日本語能力試験/N5.md
+++ b/日本語/文法/日本語能力試験/N5.md
@@ -1,5 +1,4 @@
-[Source](https://youtu.be/_ojVS-KgDEg)
-
+[Source](https://youtu.be/_ojVS-KgDEg) (Only took notes of what I don't know).
 ## ちゃいけない/じゃいけない - Must not do(Spoken Japanese)
 てはいけない　→　ちゃいけない
 （動詞）て　　→　ちゃいけない
@@ -88,3 +87,100 @@ Body swapping stooped, my calls don't go through and my mails are not replied to
 例: 多分、私**じゃなくていい**ね。
 翻訳: Probably, it **doesn't have to be** me, right?
 #- じゃ is the verb here。
+
+## のです・んです・んだ
+Explain something, express reason, emphasis
+
+例: そんなに上士様は偉い**のです**か？
+翻訳: **Is it that** your jyoushi are so great?
+
+## ので
+Explain reason, A ので B 
+B happened because of A.
+例: 雨が降っていた**ので**, 試合が中止になりました。
+翻訳: It rained, **therefore**, the match was cancelled.
+
+## しかし
+But...(formal), でも(informal)
+例: キラ、　お前がどんな手段で殺人を行っているのかとても興味がある、 **しかし**そんな事は…お前を捕まえれば分ることだ。
+翻訳: Kira, your way of killing interests me, **but** this thing, I will learn after I catch you.
+
+![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Death%20Note/media/A_DeathNote_12_0.20.34.605.jpg)
+
+
+## それから
+after that, and then, since then(independent events)
+例: あの日 降り出した雨は**それから**１日も止むことなく。
+翻訳: In this day rain started to fall, **and then**, it didn't stop for (even) one day(never stopped).
+
+![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Weathering%20with%20You/media/Tenki_no_Ko_1_1.36.59.870.jpg)
+
+
+## そして
+and; and then; thus; and now～(connecting events)
+
+例: 君は昔　私のことがちょっと好きだったでしょう、**そして**今は別の好きな子がいるでしょう。
+翻訳: Before, you liked me a little(had a crush), right? **and now** it looks like(でしょう) you like someone else.
+
+![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Your%20Name/media/Anime_-_YourName_1_0.40.55.240.jpg)
+
+
+## たことがある
+Done something before(in the past)
+例: 俺　組紐を作る人に前に聞い**たことがある**んです、紐は時間の流れそのものだって。
+翻訳: From someone who makes 組紐 **I heard before** that 紐 are the flow of time. 
+
+![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Your%20Name/media/Anime_-_YourName_1_0.55.56.395.jpg)
+
+## たことがない
+Have never done something before
+
+例: 桐生萌郁？ 私も聞い**たことがない**。
+翻訳: Kiryuu Moeka, I also **never heard** that name.
+
+![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Steins%20Gate/media/A_SteinsGateS01_E08_1_0.11.02.290.jpg)
+
+#- for the previous two examples removing **が** is acceptable in informal speech.
+
+## たり～たり
+do such things as A and B.
+だったり for nouns. 量子だったり、着物だったり
+かったり for い-adj. 忙しいかったり、
+
+
+![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Your%20Name/media/Anime_-_YourName_1_0.56.03.520.jpg)
+
+
+例: (紐は) 捻じれ**たり**　絡まっ**たり** 戻っ**たり**　繋がっ**たり**、それが時間だって。
+翻訳: As for the thread,　You can **do things like** twisting it, tangling, rebounding, and getting tied again, just like time.
+
+
+## てある
+Has been done, and the end result is still being visible.
+
+例: 貼っ**てある**
+
+![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/K-On!/media/A_KOn_S01E14_1_0.07.36.353.jpg)
+
+
+## ている
+ongoing action/current state.
+
+例: 糟糠の妻を探して**いる**。
+翻訳: Currently look**ing** for a wife that will accept my poor ass.
+
+## てから
+from doing; since; after doing～
+
+例: 大きくなっ**てから**、 初めて 会ったからね。
+翻訳: **Since** you grew up, it's the first time we meet.
+
+## つもり
+Plan to～；Intend to～
+
+例: じゃあ 見ない**つもり**？
+翻訳: Are you **planning** to not see it(ignore it).
+
+![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Steins%20Gate/media/A_SteinsGateS01_E05_1_0.17.37.161.jpg)
+
+
