add audio for your name

--- a/日本語/文法/日本語能力試験/N4.md
+++ b/日本語/文法/日本語能力試験/N4.md
@@ -108,3 +108,36 @@ not very, not much
 翻訳：We don't **whether it's him or not**.
 
 ![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Code%20Geass%20Season%201/media/A_Code_GeassS01_07_0.21.23.530.jpg)
+
+
+## かもしれない・かもしれん・かも
+Might be/Perhaps
+
+## かな (Gender nuterual かしら)
+
+
+## きっと(Sure/undoubtably)
+
+
+## ことがある (To have things to do; there are times when; sometimes)
+
+
+## ことにする（To Decide on）
+
+
+## くする・にする (～to make something like ～adj)
+
+## または　(both; otherwise; choice between A or B)
+
+## みたいだ・ようだ　(like; similar to)
+
+## みたいな　（like; similar to）with nouns
+
+## みたいに　（like; similar to）with verbs・adjectives
+
+## など　（Such as; Things like）
+
+## ながら　(While; during)
+～ながら、...
+～being secondary and ... is the primary part of the event.
+
