--- a/日本語/文法/日本語能力試験/N5.md
+++ b/日本語/文法/日本語能力試験/N5.md
@@ -58,6 +58,9 @@ Starting a new sentence/topic.
 
 #- ず is another way to negate a sentence it's like 通じない
 
+![]()
+![[君の名は例1.mp3]]
+
 Body swapping stooped, my calls don't go through and my mails are not replied to. **That's why** I decided to meet 三葉 directly(in person). I want to meet her **but**...-interrupted by his 店長- you don't know her address/location?
 
 ## どうやって　(how; by what means)
@@ -153,6 +156,7 @@ and; and then; thus; and now～(connecting events)
 
 ![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Your%20Name/media/Anime_-_YourName_1_0.40.55.240.jpg)
 
+![[君の名は例2.mp3]]
 
 ## たことがある
 Done something before(in the past)
@@ -162,6 +166,8 @@ Done something before(in the past)
 翻訳: From someone who makes 組紐 **I heard before** that 紐 are the flow of time. 
 
 ![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Your%20Name/media/Anime_-_YourName_1_0.55.56.395.jpg)
+
+![[君の名は例3.mp3]]
 
 ## たことがない
 Have never done something before
@@ -181,14 +187,13 @@ do such things as A and B.
 
 かったり for い-adj. 忙しいかったり、
 
-
-![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Your%20Name/media/Anime_-_YourName_1_0.56.03.520.jpg)
-
-
 例: (紐は) 捻じれ**たり**　絡まっ**たり** 戻っ**たり**　繋がっ**たり**、それが時間だって。
 
 翻訳: As for the thread,　You can **do things like** twisting it, tangling, rebounding, and getting tied again, just like time.
 
+![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Your%20Name/media/Anime_-_YourName_1_0.56.03.520.jpg)
+
+![[君の名は例4.mp3]]
 
 ## てある
 Has been done, and the end result is still being visible.
