Try! N3 1st session

--- a/日本語/文法/日本語能力試験/N4.md
+++ b/日本語/文法/日本語能力試験/N4.md
@@ -1,4 +1,11 @@
-### 間 (during; while; between-physical-)
+---
+tags:
+  - 日本語
+  - 文法
+---
+
+
+## 間 (during; while; between-physical-)
 
 動詞　＋　間
 名 ＋　の　＋　間
@@ -8,10 +15,10 @@
 
 翻訳：**While** I was coming here, I was hoping. The person here won't be you.
 
-### 間に(while/during～ something happened)
+## 間に(while/during～ something happened)
 momentarily, temporarily.
 
-### あまり～ない
+## あまり～ない
 not very, not much
 
 例: だから 一応いちおう、 扇風機せんぷうきはあるんだけど、  
@@ -19,23 +26,27 @@ not very, not much
 
 翻訳: That's why we **don't use the fan that much**. 
 
-### ば (conditional; if [A] then [B])
+## ば (conditional; if [A] then [B])
 
 例: 人間にんげんたちが 俺おれたちにしたことを 考かんがえれ**ば**わかるだろう？
 
 翻訳: **If** you think about what humans done, you might understand.
-### 場合は (in the event of; in the case that)
+## 場合は (in the event of; in the case that)
 
 例: 屋敷は 立ち入り禁止たちいりきんしだ。 特に 男はな。  
+
 はいはい　じゃあ　わたし。  
+
 女の **場合は**もっと 面倒だ。
 
 翻訳: 
 -Entering the estate is forbidden, even for guys.
+
 =I'm here
+
 -**In case of** women, it's even more trouble.
 
-### ばかり・ばっかり (only; nothing but～)
+## ばかり・ばっかり (only; nothing but～)
 
 例：骨と皮**ばかり**で
 
@@ -44,7 +55,7 @@ not very, not much
 ![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Fullmetal%20Alchemist%20Brotherhood/media/A_FullmetalAlchemistBrotherhood_59_0.20.00.685.jpg)
 
 
-### だけで (just by; just doing)
+## だけで (just by; just doing)
 
 例：あー　ごめん　すまん　つい 一回**だけだって**
 
@@ -53,13 +64,13 @@ not very, not much
 ![](https://us-southeast-1.linodeobjects.com/immersionkit/media/anime/Your%20Name/media/Anime_-_YourName_1_1.19.26.895.jpg)
 
 
-### でも(...or something; how about～)
+## でも(...or something; how about～)
 
 例：みんな、 何してるんだ？パーティ**でも**やるのか?  
 
 翻訳：Everyone, what are you doing? is this a party **or something**.
 
-### がする(～feel)
+## がする(～feel)
 
 
 例：そういえば　ずっと変な夢を見とったような気**がする**んやけど
@@ -141,3 +152,5 @@ Might be/Perhaps
 ～ながら、...
 ～being secondary and ... is the primary part of the event.
 
+
+## [～なら](Try!#～なら...)
