--- a/日本語/文法/日本語能力試験/N4.md
+++ b/日本語/文法/日本語能力試験/N4.md
@@ -184,7 +184,7 @@ Might be/Perhaps
 
 ## ことにする（To Decide on）
 
-![](N5#複合例)
+![](N5.md#複合例)
 
 
 ## くする・にする (～to make something like ～adj)
@@ -280,7 +280,7 @@ Might be/Perhaps
 
 
 ## ～なら
-![](Try!#～なら...)
+![](Try!.md#～なら...)
 
 
 ## なかなか～ない (Not easy to; struggle to)
@@ -312,7 +312,7 @@ Might be/Perhaps
 
 （must do something; have to do something）
 
-例：やら[**なくてもいい**](N4#なくてもいい)ことならやらない。やら**なければいけない**ことなら<ruby>手短 <rt>てみじか</rt></ruby>にだ。
+例：やら[**なくてもいい**](N4.md#なくてもいい)ことならやらない。やら**なければいけない**ことなら<ruby>手短 <rt>てみじか</rt></ruby>にだ。
 
 翻訳：If I **don't have to** do it, I won't. If I **have to do it**, I will make it short/brief.
 
@@ -435,7 +435,7 @@ Might be/Perhaps
 
 ## ていく
  
- ![](Try!#てくる・ていく)
+ ![](Try!.md#てくる・ていく)
 
 ## ていた
 
