--- a/Cyber Security/كالقابض/الأسبوع الأول/أساسيات الشبكات -  اختبار اختراق تطبيقات الويب.md
+++ b/Cyber Security/كالقابض/الأسبوع الأول/أساسيات الشبكات -  اختبار اختراق تطبيقات الويب.md
@@ -199,3 +199,49 @@ Response codes:
 
 
 
+
+
+
+
+
+## اليوم الثاني
+Book: CISSP All in one exam guide (ch 7)
+
+>CA: Certificate Authorities
+>شهادات موجودة عالمتصفح عشان تأكد إن الموقع اللي بيستخدم https موثوق.
+
+لو حد عمل trust لأي certificate يقدر يشوف ال traffic زي ما بنعمل في burpsuite.
+
+المتصفح بيبعت request للسيرفر إنه يتصل على 443 بيرد السيرفر بعدها بال encryption algorithm وال public key بعدها بيتأكد لو ال certificate سليمة من ال CRL(Certificate Revocation List).
+
+بعد كدة المتصفح بيبعت البيانات مشفرة بال public key والسيرفر يقدر يفك التشفير بال private key.
+
+ده اسمه Asymmetric Cryptography
+
+### What Happens when I open Google.com in my browser
+
+![](https://cdn.imgchest.com/files/4z9cvwbdl37.png)
+
+أول اتنين layers بيبقوا هاردوير، تالت layer فيه ال IP. رابع layer ده بيكون فيه البروتوكول بتاع TPC و UDP. خامس layer بيعرف الأجهزة على ال network. سادس layer بيحصل فيه ال encryption. سابع layer بيبقى فيه SMTP و HTTP.
+
+مجرد ما وصلت الكابل كدة عديت layer 1، في layer 2 مخدتش IP Address فبكلم DHCP عشان يديني IP Address.
+
+- DHCPDISCOVER: search for DHCP server.
+- DHCPREQUEST: request an IP from DHCP server.
+- DHCPOFFER: DHCP server replying with an IP.
+- DHCPACK: accepting the IP from DHCP server.
+
+كدة أنا وصلت Layer 3، بعدها هستعمل TCP:443 في layer 4,5 وبعدها بيحصل HTTPS connection.
+
+![](https://cdn.imgchest.com/files/7lxcpdvplx7.png)
+
+>SYN-flood DoS attack: happens when the sender don't reply with SYN+ACK keeping the server hanging waiting for a SYN+ACK in an open SYN connection.
+
+UDP:
+- stateless connection.
+- used for data-intensive connection.
+
+>DNS Amplification Attack: Sending a request to open DNS resolver with a spoofed IP of the target and request the DNS cache, if this was done using many open DNS resolvers a huge amount of data could be sent to the target.
+
+
+في TCP بيرتب ال packets بعد ما يقسمهم على حسب ال MTU، في UDP مش بيرتبهم، مجرد بيبعت.
