--- a/Cyber Security/كالقابض/الأسبوع الأول/أساسيات الشبكات -  اختبار اختراق تطبيقات الويب.md
+++ b/Cyber Security/كالقابض/الأسبوع الأول/أساسيات الشبكات -  اختبار اختراق تطبيقات الويب.md
@@ -199,11 +199,6 @@ Response codes:
 
 
 
-
-
-
-
-
 ## اليوم الثاني
 Book: CISSP All in one exam guide (ch 7)
 
@@ -245,3 +240,60 @@ UDP:
 
 
 في TCP بيرتب ال packets بعد ما يقسمهم على حسب ال MTU، في UDP مش بيرتبهم، مجرد بيبعت.
+
+
+## اليوم الثالث والرابع والخامس
+
+![](https://cdn.imgchest.com/files/4gdcxm326v4.png)
+
+>ALH: Application Layer Hader, PLH: Presentation Layer Header, etc...
+
+- Application and Presentation layer prepares the data for transmission.
+- Session layer creates a channel.
+- Transport layer picks the used protocol and ensures connection.
+- Network layer specify receiver IP.
+- Datalink layer adds MAC Address and the used switch.
+
+### Physical Layer
+ازاي بنوصل الأجهزة ببعض عن طريق الأسلاك أو ال wi-fi وبنستعمل كذا طريقة في التوصيل(Topology)
+- Star Topology
+- Ring Topology
+- Bus Topology
+
+#### Star Topology
+
+![](https://cdn.imgchest.com/files/ye3c2gvxnd4.png)
+
+#### Ring Topology
+
+مبقيتش مستخدمة، بتمشي في اتجاه واحد ولو node وقعت ال nodes اللي بعدها هتقع معاها.
+
+![](https://cdn.imgchest.com/files/4apc5v9l9j4.png)
+
+
+
+#### Bus Topology
+
+![](https://cdn.imgchest.com/files/yd5cem53kr4.png)
+
+
+### Datalink Layer
+
+المرحلة اللي فيها السويتشات بتشتغل، كل جهاز بيبقى ليه MAC Address بيتكون من 6 خانات Hexadecimal أو تلاتة بيبقى معرف للشركة المصنعة وأخر شركة.
+
+ال MAC Address ممكن يتعمله spoof(احتيال).
+
+الداتا في layer 2 اسمها frame.
+
+![](https://cdn.imgchest.com/files/4gdcxm3vqz4.png)
+
+
+![](https://cdn.imgchest.com/files/49zc2vng5gy.png)
+
+### Network Layer
+
+مسؤول عن توصيل الشبكات ببعض.
+
+
+![](https://cdn.imgchest.com/files/7lxcpxaj8d7.png)
+
